<resources>
    <string name="app_name">Incluses</string>
    <string name="login">Login</string>
    <string name="register">Cadastrar</string>
    <string name="enter">Entrar</string>
    <string name="willRegister">Cadastrar-se</string>
    <string name="termsOfUse">Ao continuar, você concorda com a</string>
    <string name="termsOfUseII">Política de privacidade e Termos de uso.</string>
    <string name="back">Voltar</string>
    <string name="back_strong"><b>Voltar</b></string>
    <string name="forgotPassword"><u>Esqueci a senha</u></string>
    <string name="passwordConfirmed">Confirmar Senha</string>
    <string name="password">Senha</string>
    <string name="numRegister">CPF</string>
    <string name="numRegisterHint">Digite seu CPF</string>
    <string name="cityHint">Digite o nome da cidade</string>
    <string name="streetHint">Digite o nome da rua</string>
    <string name="addressNumHint">Digite o número do endereço</string>
    <string name="stateHint">Selecione o estado onde mora</string>
    <string name="notAccount">Não possui uma conta?</string>
    <string name="hadAccount">Já possui uma conta?</string>
    <string name="createAccount">Crie sua conta no Incluses</string>
    <string name="email">Digite seu e-mail</string>
    <string name="name">Digite seu nome</string>
    <string name="search">Buscar</string>
    <string name="nameSocial">Nome Social (opcional)</string>
    <string name="pronoun">Digite seu pronome</string>
    <string name="phone_number">Digite seu número</string>
    <string name="email_complete">.com</string>
    <string name="passwordHelperText">A senha deve possuir no mínimo 8 caracteres!</string>
    <string name="passwordConfirmedHelperText">Confirme sua senha!</string>
    <string name="continueText">Continuar</string>
    <string name="skipText">Pular</string>
    <string name="dateBorn">Selecione sua data de nascimento</string>
    <string name="error_underage">Você deve ter mais de 18 anos para se registrar.</string>
    <string name="home">Home</string>
    <string name="course">Curso</string>
    <string name="feed">Feed</string>
    <string name="positionsAndSalaries">Cargos e Salários</string>
    <string name="courses">Cursos</string>
    <string name="messagesAndIterviews">Mensagens e Entrevistas</string>
    <string name="perfil">Perfil</string>
    <string name="centerOfHelp">Central de Ajuda</string>
    <string name="termsAndPrivacyPolicy">Termos e Políticas</string>
    <string name="config">Configurações</string>
    <string name="coursesInitialized">Cursos Inicializados</string>
    <string name="jobs">Vagas</string>
    <string name="chat">Bate-papo</string>
    <string name="skills">
        <ul>
            <br><li>Java</li></br>
            <br><li>Kotlin</li></br>
            <li>Android Development</li>
        </ul>
    </string>

    <!--    states-->
    <string-array name="states_array">
        <item>AC - Acre</item>
        <item>AL - Alagoas</item>
        <item>AP - Amapá</item>
        <item>AM - Amazonas</item>
        <item>BA - Bahia</item>
        <item>CE - Ceará</item>
        <item>DF - Distrito Federal</item>
        <item>ES - Espírito Santo</item>
        <item>GO - Goiás</item>
        <item>MA - Maranhão</item>
        <item>MT - Mato Grosso</item>
        <item>MS - Mato Grosso do Sul</item>
        <item>MG - Minas Gerais</item>
        <item>PA - Pará</item>
        <item>PB - Paraíba</item>
        <item>PR - Paraná</item>
        <item>PE - Pernambuco</item>
        <item>PI - Piauí</item>
        <item>RJ - Rio de Janeiro</item>
        <item>RN - Rio Grande do Norte</item>
        <item>RS - Rio Grande do Sul</item>
        <item>RO - Rondônia</item>
        <item>RR - Roraima</item>
        <item>SC - Santa Catarina</item>
        <item>SP - São Paulo</item>
        <item>SE - Sergipe</item>
        <item>TO - Tocantins</item>
    </string-array><!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>