<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Presentation.IntroVerifyNumber">

    <ImageView
        android:id="@+id/imageViewIntroVerifyNumberBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_05"
        android:layout_marginTop="@dimen/spacing_06"
        android:contentDescription="@string/back"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewIntroVerifyNumberBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_05"
        android:text="@string/back_strong"
        android:textSize="@dimen/spacing_06"
        app:layout_constraintStart_toEndOf="@id/imageViewIntroVerifyNumberBackButton"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Text "Incluses" -->
    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toEndOf="@id/textViewIntroVerifyNumberBack"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textIntroVerifyNumber"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="Precisamos verificar seu número de telefone e para isto enviaremos um código de 4 dígitos na sua caixa de entrada. Copie o código e cole no campo na tela a seguir!"
        android:textSize="@dimen/spacing_06"
        android:layout_marginTop="@dimen/spacing_05"
        app:layout_constraintTop_toBottomOf="@id/logoImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/continueButtonIntroVerifyNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/style_primary_button"
        android:text="@string/continueText"
        android:layout_marginTop="300dp"
        android:paddingStart="80dp"
        android:paddingEnd="80dp"
        app:layout_constraintTop_toBottomOf="@id/textIntroVerifyNumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>