<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Presentation.Login">

    <ImageView
        android:id="@+id/imageViewLoginUserLogo"
        android:layout_width="250dp"
        android:layout_height="255dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/imageViewLoginNameIncluses"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewLoginNameIncluses"
        android:layout_width="300dp"
        android:layout_height="92dp"
        android:layout_marginTop="@dimen/spacing_07"
        android:src="@drawable/incluses_name"
        app:layout_constraintBottom_toTopOf="@+id/buttonLoginUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLoginUserLogo" />

    <Button
        android:id="@+id/buttonLoginUser"
        style="@style/style_primary_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_05"
        android:paddingStart="@dimen/spacing_16"
        android:paddingEnd="@dimen/spacing_16"
        android:text="@string/login"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/buttonRegisterLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLoginNameIncluses" />

    <Button
        android:id="@+id/buttonRegisterLogin"
        style="@style/style_secondary_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_03"
        android:layout_marginBottom="10dp"
        android:paddingStart="@dimen/spacing_11"
        android:paddingEnd="@dimen/spacing_11"
        android:text="@string/register"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/answerSurvey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLoginUser" />

    <TextView
        android:id="@+id/answerSurvey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_03"
        android:layout_marginBottom="10dp"
        android:textColor="@color/light_blue"
        android:text="Responder Pesquisa"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewTermsOfUseLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRegisterLogin" />

    <TextView
        android:id="@+id/textViewTermsOfUseLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/termsOfUse"
        app:layout_constraintBottom_toTopOf="@+id/textViewTermsOfUseLoginII"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answerSurvey" />

    <TextView
        android:id="@+id/textViewTermsOfUseLoginII"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_10"
        android:text="@string/termsOfUseII"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTermsOfUseLogin" />


</androidx.constraintlayout.widget.ConstraintLayout>